# TaskOgre

./: .gitignore  Cargo.toml  README.md  Rocket.toml
db/: db.sqlite
doc/: reqt.md
src/: main.rs  task.rs
static/: index.html.tera
