[package]
name = "todo"
version = "0.0.0"
publish = false

[dependencies]
rocket = "0.4.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.3"
log = "0.4"

[dev-dependencies]
parking_lot = { version = "0.10", features = ["nightly"] }
rand = "0.6"

[dependencies.rocket_contrib]
version = "0.4.7"
default_features = false
features = ["tera_templates", "diesel_sqlite_pool", "serve"]
